Change to line graphs

--- a/reports/template.html
+++ b/reports/template.html
@@ -67,40 +67,40 @@
     <script>
       //Array.apply(null, Array(500)).map(function (_, i) {return i;});
       batinput = %BATD%;
-      var bat = [{x:batinput.keys(),y: batinput,type: 'bar'}];
+      var bat = [{x:batinput.keys(),y: batinput,type: 'line'}];
       Plotly.newPlot('bat', bat);
       catinput = %CATD%;
-      var cat = [{x:catinput.keys(),y: catinput,type: 'bar'}];
+      var cat = [{x:catinput.keys(),y: catinput,type: 'line'}];
       Plotly.newPlot('cat', cat);
       eitinput = %EITD%;
-      var eit = [{x:eitinput.keys(),y: eitinput,type: 'bar'}];
+      var eit = [{x:eitinput.keys(),y: eitinput,type: 'line'}];
       Plotly.newPlot('eit', eit);
       nittinput = %NITD%;
-      var nit = [{x:nittinput.keys(),y: nittinput,type: 'bar'}];
+      var nit = [{x:nittinput.keys(),y: nittinput,type: 'line'}];
       Plotly.newPlot('nit', nit);
       rsttinput = %RSTD%;
-      var rst = [{x:rsttinput.keys(),y: rsttinput,type: 'bar'}];
+      var rst = [{x:rsttinput.keys(),y: rsttinput,type: 'line'}];
       Plotly.newPlot('rst', rst);
       tottinput = %TOTD%;
-      var tot = [{x:tottinput.keys(),y: tottinput,type: 'bar'}];
+      var tot = [{x:tottinput.keys(),y: tottinput,type: 'line'}];
       Plotly.newPlot('tot', tot);
       tdttinput = %TDTD%;
-      var tdt = [{x:tdttinput.keys(),y: tdttinput,type: 'bar'}];
+      var tdt = [{x:tdttinput.keys(),y: tdttinput,type: 'line'}];
       Plotly.newPlot('tdt', tdt);
       patinput = %PATD%;
-      var pat = [{x:patinput.keys(),y: patinput,type: 'bar'}];
+      var pat = [{x:patinput.keys(),y: patinput,type: 'line'}];
       Plotly.newPlot('pat', pat);
       sdtinput = %SDTD%;
-      var sdt = [{x: sdtinput.keys(),y: sdtinput,type: 'bar'}];
+      var sdt = [{x: sdtinput.keys(),y: sdtinput,type: 'line'}];
       Plotly.newPlot('sdt', sdt);
       pmtinput = %PMTD%;
-      var pmt = [{x: pmtinput.keys(),y: pmtinput,type: 'bar'}];
+      var pmt = [{x: pmtinput.keys(),y: pmtinput,type: 'line'}];
       Plotly.newPlot('pmt', pmt);
       pcrjinput = %PCRJ%;
-      var pcrj = [{x: pcrjinput.keys(),y: pcrjinput,type: 'bar'}];
+      var pcrj = [{x: pcrjinput.keys(),y: pcrjinput,type: 'line'}];
       Plotly.newPlot('pcrj', pcrj);
       pcrdinput = %PCRD%;
-      var pcrd = [{x: pcrdinput.keys(),y: pcrdinput,type: 'bar'}];
+      var pcrd = [{x: pcrdinput.keys(),y: pcrdinput,type: 'line'}];
       Plotly.newPlot('pcrd', pcrd);
     </script>
   </body>
